--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.3.1"
+    "mysql2": "^3.3.1",
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
