--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "jquery": "^3.7.0",
     "method-override": "^3.0.0",
     "mysql2": "^3.3.1",
     "passport": "^0.6.0",
